src/styles/_theme.scss
$navy: #242a33;
$blue: #ddeeff;
$dark-grey: #5d6569;
$medium-grey: #73838e;
$light-grey: #95a0a5;
$default-grey: #ccc;
$off-white: #f7f7f7; // #f5f2f0
$white: #fff;
$yellow: #ffc928;
$light-yellow: lighten($yellow, 6%);
$dark-yellow: darken($yellow, 8%);

$wrapper-width: 960px;
$box-shadow: 0 3px 0 rgba(36, 42, 51, 0.1);

$base-font-size: 15px;
$font-stack: "museo-sans", sans-serif;
$light-weight-font: 100;
$regular-weight-font: 300;
$bold-weight-font: 500;
$bolder-weight-font: 700;
$letter-spacing: 1px;

$base-font-size: 15px;
$font-stack: "museo-sans", sans-serif;
$letter-spacing: 1px;

html {
    font-size: $base-font-size;
    font-family: $font-stack;
}

.onscreen {
    background-color: $navy;
}


// Typography

a, a:visited {
    @include transition(0.3s);
    color: inherit;
    text-decoration: none;
    cursor: pointer;

    &.solid-btn {
        width: 220px;
        height: 66px;
        background: $yellow;
        padding: 0;
        border: 0;
        margin: 0 auto;

        color: $white;
        font-size: $base-font-size;
        font-weight: $bolder-weight-font;
        line-height: 66px;
        text-align: center;
        text-transform: uppercase;
        display: block;

        &:hover { background: $light-yellow; }
    }

    &.outine-btn {
        background: transparent;
        padding: 10px 18px 9px !important;
        border: 1px solid $white;
        border-radius: 3px;
        @include box-sizing(border-box);

        color: inherit;
        font-size: 11px;
        font-weight: $bold-weight-font;
        letter-spacing: $letter-spacing;
        text-indent: $letter-spacing;
        text-transform: uppercase;

        &:hover { background: rgba(0, 0, 0, 0.03); }
    }

    &.single-line {
        padding: 0 0 2px;
        border-bottom: 2px solid $light-grey;
        cursor: pointer;
    }
}


h1 {
    margin: 0 0 25px -2px;

    color: $dark-grey;
    font-size: 35px;
    font-weight: $light-weight-font;
    letter-spacing: 1px;
    line-height: 44px;
    text-transform: none;
}

h2 {
    margin: 0 0 20px -2px;

    color: $navy;
    font-size: 25px;
    font-weight: $regular-weight-font;
    line-height: 32px;
    text-transform: none;
}


h3 {
    color: $light-grey;
    font-size: 10px;
    font-weight: $bolder-weight-font;
    letter-spacing: $letter-spacing;
    line-height: 14px;
    text-indent: $letter-spacing;
    text-transform: uppercase;
}

// Change this when you have time

h4 {
    color: $dark-grey;
    font-size: 17px;
    font-weight: $regular-weight-font;
    line-height: 32px;
    text-transform: none;
}


p {
    color: $medium-grey;
    font-weight: $regular-weight-font;
    line-height: 24px;

    &.hero { margin: 0 0 100px 0; }
}


// Layout

.wrapper {
    width: $wrapper-width;
    margin: 0 auto;
}


.hero-content {
    p {
        width: 350px;
        margin: 0 0 80px 0;
    }
}


label {
    @include transition(0.3s);
    color: $light-grey;
    background: $white;

    span {
        @include transition(0.3s);
        color: $light-grey;
        font-size: 10px;
        font-weight: $bolder-weight-font;
        letter-spacing: 1px;
        text-transform: uppercase;
    }

    input {
        background: transparent;
        border: none;

        font-family: $font-stack;
        -webkit-font-smoothing: antialiased;
        color: $navy;
        font-size: $base-font-size;
        font-weight: $regular-weight-font;

        @include placeholder {
            font-family: $font-stack;
            -webkit-font-smoothing: antialiased;
            color: $default-grey;
            font-weight: $regular-weight-font;
        }
    }

    &.focus{
        background: $blue;

        span { color: $navy; }
    }
}

.step {
    float: left;
    width: 40px;
    height: 40px;
    display: block;
    border: 2px solid $medium-grey;
    border-radius: 100%;

    color: $medium-grey;
    font-weight: $bolder-weight-font;
    line-height: 36px;
    text-align: center;

    &:before {
        counter-increment: step;
        content: counters(step, '');
    }
}

.two-col {
    position: relative;
    width: 45%;
    display: inline-block;
    vertical-align: top;
    margin: 0 2.5%;

    font-size: $base-font-size;
}

